--- a/source/html/index.html
+++ b/source/html/index.html
@@ -2,7 +2,7 @@
 <head>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -29,13 +29,6 @@
 	}
 </style>
 
-<script>
-  $('#myButton').on('click', function () {
-    var $btn = $(this).button('loading')
-    $btn.button('reset')
-  })
-</script>
-
 </head>
 
 <body>
@@ -43,7 +36,7 @@
 	<div class="col-md-6 col-md-offset-3">
 		<h3><i>PHP - StackOverflow</i></h3>
 
-		<button type="button" id="myButton" data-loading-text="Loading..." class="btn btn-primary" autocomplete="off">
+		<button type="button" id="persist_data_button" data-loading-text="Loading..." class="btn btn-primary" autocomplete="off">
   			Persistir dados
 		</button>
 
@@ -76,9 +69,8 @@
   						<div class="col-xs-6 col-sm-3">
 	  						<input name="score" type="text" class="form-control" id="score">
   						</div>
-  						<input value="OK" type="submit">
   						<div class="search-button">
-							<button type="button" id="myButton" data-loading-text="Loading..." 	class="btn btn-success" autocomplete="off">
+							<button type="button" id="search_button" data-loading-text="Loading..." 	class="btn btn-success" autocomplete="off">
 							Buscar
 							</button>
   						</div>
@@ -87,10 +79,27 @@
 			</div>
 		</div>
 	</div>
-
-
-
 </div>
 
+<script>
+	$('#persist_data_button').on('click', function () {
+		var $btn = $(this).button('loading')
+
+		$.ajax({
+			url: "/getdata",
+			context: document.body
+		}).done(function(){
+			$btn.button('reset')
+		}).fail(function(){
+			alert("FAIL")
+		});
+	})
+
+	$('#search_button').on('click', function () {
+		var $btn = $(this).button('loading')
+
+		//$btn.button('reset')
+	})
+</script>
 </body>
 </html>
