--- a/source/html/index.html
+++ b/source/html/index.html
@@ -146,8 +146,11 @@
 		var tbody = document.createElement("tbody")
 		for (var i in data) {
 			tableref.appendChild(tbody)
-			string = "<td>"+data[i]["title"]+"</td><td>"+data[i]["score"]+"</td><td>"+data[i]["is_answered"]+"</td><td><a href='"+data[i]["link"]+"'>Link</a></td>"
 			
+			var answer = (data[i]["is_answered"]) ? true : false
+
+			string = "<td>"+data[i]["title"]+"</td><td>"+data[i]["score"]+"</td><td>"+answer+"</td><td><a href='"+data[i]["link"]+"'>Link</a></td>"
+
 			var row = tbody.insertRow(tbody.rows.length)
 			row.innerHTML = string
 		}
