Added a message when the data from stackoverflow is saved

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -112,6 +112,7 @@
 			context: document.body
 		}).done(function(){
 			$btn.button('reset')
+			alert("Dados salvos!")
 		}).fail(function(){
 			alert("Alguma coisa deu errado!")
 			$btn.button('reset')
